--- a/movies.html
+++ b/movies.html
@@ -19,7 +19,7 @@
 
     <!-- JavaScript -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="main.js" defer></script>
+    <script src="index.js" defer></script>
     <script src="popup.js" defer></script>
     <script src="form-validation.js" defer></script>
     <script src="slideshow.js" defer></script>
@@ -56,7 +56,7 @@
             <li class="nav-buttons"><a href="movies.html">Movies</a></li>
             <li class="nav-buttons"><a href="series.html">Series</a></li>
             <li class="cta-button">
-              <a href="login.html" class="login">Login</a>
+              <a href="form-validation.html" class="login">Login</a>
             </li>
           </ul>
         </div>
