--- a/privacy.html
+++ b/privacy.html
@@ -18,7 +18,7 @@
         />
     
         <!-- JavaScript -->
-        <script src="main.js" defer></script>
+        <script src="index.js" defer></script>
       </head>
   
 <body>
@@ -52,7 +52,7 @@
               <li class="nav-buttons"><a href="movies.html">Movies</a></li>
               <li class="nav-buttons"><a href="series.html">Series</a></li>
               <li class="cta-button">
-                <a href="login.html" class="login">Login</a>
+                <a href="form-validation.html" class="login">Login</a>
               </li>
             </ul>
           </div>
