form and backToTop commit

--- a/imprint.html
+++ b/imprint.html
@@ -59,6 +59,10 @@
       </nav>
     </header>
 
+    <a href="#" class="back-to-top">
+      <i class="fas fa-chevron-up"></i>
+    </a>
+
     <section>
       <article>
         <h2>MOVIEFLASH - About Us</h2>
