--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>MOVIEFLASH - Watch Movies Online</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="img/clapperboard.png" />
     <link
       rel="stylesheet"
@@ -101,6 +101,11 @@
       <span class="dot" onclick="currentSlide(3)"></span>
     </div>
 
+    <a href="#" class="back-to-top">
+      <i class="fas fa-chevron-up"></i>
+    </a>
+
+    <!-- Movies -->
     <h2 class="popular-movies">Popular Movies</h2>
 
     <div class="wrapper">
