--- a/form-validation.html
+++ b/form-validation.html
@@ -59,6 +59,10 @@
       </nav>
     </header>
 
+    <a href="#" class="back-to-top">
+      <i class="fas fa-chevron-up"></i>
+    </a>
+
     <!-- Form Validation -->
     <form action="#" id="registration">
       <h1>Register</h1>
