--- a/movies.html
+++ b/movies.html
@@ -63,6 +63,10 @@
       </nav>
     </header>
 
+    <a href="#" class="back-to-top">
+      <i class="fas fa-chevron-up"></i>
+    </a>
+
     <!-- Action Movies -->
     <div class="wrapper-title">
       <a class="movies-title" href="#">Action Movies</a>
