--- a/privacy.html
+++ b/privacy.html
@@ -58,6 +58,10 @@
           </div>
         </nav>
       </header>
+
+      <a href="#" class="back-to-top">
+        <i class="fas fa-chevron-up"></i>
+      </a>
       
 <section>
   
