--- a/form-validation.html
+++ b/form-validation.html
@@ -92,7 +92,7 @@
         </p>
 
         <p>
-          <label for="mobile">* Mobile:</label>
+          <label for="mobile">* Mobile number:</label>
           <input type="number" id="mobile" name="mobile" />
         </p>
 
