--- a/form-validation.html
+++ b/form-validation.html
@@ -69,7 +69,7 @@
 
       <div class="form-wrapper">
         <div class="gender-container">
-          <p>* Gender:</p>
+          <p>Gender: *</p>
         <p>
           <input type="radio" id="genderM" name="gender" value="male" />
           <label for="genderM">Male</label>
@@ -82,17 +82,17 @@
       </div>
 
         <p>
-          <label for="username">* Username:</label>
+          <label for="username">Username: *</label>
           <input type="text" id="username" name="username" />
         </p>
 
         <p>
-          <label for="email">* Email:</label>
+          <label for="email">Email: *</label>
           <input type="email" id="email" name="email" />
         </p>
 
         <p>
-          <label for="mobile">* Mobile number:</label>
+          <label for="mobile">Mobile number: *</label>
           <input type="number" id="mobile" name="mobile" />
         </p>
 
@@ -108,12 +108,12 @@
         </p>
 
         <p>
-          <label for="password1">* Password:</label>
+          <label for="password1">Password: *</label>
           <input type="password" id="password1" name="password1" />
         </p>
 
         <p>
-          <label for="password2">* Confirm Password:</label>
+          <label for="password2">Confirm Password: *</label>
           <input type="password" id="password2" name="password2" />
         </p>
 
@@ -126,8 +126,8 @@
         <p>
           <input type="checkbox" name="agreement" id="agreement" />
           <label for="agreement"
-            >* I agree to your User Agreement and acknowledge reading your User
-            Privacy Notice.</label
+            >I agree to your User Agreement and acknowledge reading your User
+            Privacy Notice. *</label
           >
         </p>
       </div>
