--- a/privacy.html
+++ b/privacy.html
@@ -41,9 +41,9 @@
   
           <!-- Hamburger Menu -->
           <a class="toggle-button" href="#">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
+            <span></span>
+            <span></span>
+            <span></span>
           </a>
   
           <!-- Navigation links -->
