--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
 
         <!-- Hamburger Menu -->
         <a class="toggle-button" href="#">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
+          <span></span>
+          <span></span>
+          <span></span>
         </a>
 
         <!-- Navigation links -->
         <div class="navbar-links">
           <ul>
-            <li class="nav-buttons"><a href="movies.html">Movies</a></li>
-            <li class="nav-buttons"><a href="series.html">Series</a></li>
-            <li class="cta-button">
+            <li class="nav-buttons nav-a"><a href="movies.html">Movies</a></li>
+            <li class="nav-buttons nav-a"><a href="series.html">Series</a></li>
+            <li class="cta-button nav-a">
               <a href="form-validation.html" class="login">Login</a>
             </li>
           </ul>
