--- a/index.html
+++ b/index.html
@@ -33,16 +33,6 @@
           <a href="index.html"><img src="img/Logo.png" alt="" /></a>
         </div>
 
-        <!-- Searchbar -->
-        <div class="container">
-          <div class="search-box">
-            <input type="text" class="search" placeholder="Search..." />
-            <button type="submit" class="search-btn">
-              <i class="fas fa-search"></i>
-            </button>
-          </div>
-        </div>
-
         <!-- Hamburger Menu -->
         <a class="toggle-button" href="#">
           <span></span>
@@ -52,6 +42,12 @@
 
         <!-- Navigation links -->
         <div class="navbar-links">
+          <div class="search-box">
+            <input type="text" class="search" placeholder="Search..." />
+            <button type="submit" class="search-btn">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
           <ul>
             <li class="nav-buttons nav-a"><a href="movies.html">Movies</a></li>
             <li class="nav-buttons nav-a"><a href="series.html">Series</a></li>
@@ -183,14 +179,13 @@
                   father Benja. As a villainous force was working its way across
                   the land, turning people into stone, magical dragons united
                   their forces together into a stone and one named Sisu used it
-                  to stop the pending apocalypse. She sacrificed herself in the
-                  process, although rumors persist that she survived.
+                  to stop the pending apocalypse.
                 </p>
 
                 <table>
                   <tr>
                     <td>Genre:</td>
-                    <td>Animation, Action & Adventure</td>
+                    <td>Animation & Adventure</td>
                   </tr>
 
                   <tr>
@@ -232,11 +227,7 @@
                   Sophie Hart from London to Paris to propose. When their train
                   is deep inside the Channel Tunnel, Grace Lewis and her team of
                   heavily armed war criminals seize the train and hold hundreds
-                  of passengers hostage. Grace threatens to expose the British
-                  governments darkest secrets and blow up the Channel Tunnel if
-                  her ransom demands are not met. Unarmed and cut off from his
-                  counter terror team, Tom is the only hope that Sophie and the
-                  other passengers have to make it out alive.
+                  of passengers hostage.
                 </p>
 
                 <table>
@@ -337,12 +328,7 @@
                   The Redneg takes place in the near future, in a fallen world
                   after a devastating world war between woman and man. Only one
                   percent of the world's population has survived the war and
-                  most of them are women. The few surviving men are being killed
-                  or captured by female groups, driven by the vision and the
-                  determination to build a new world, ruled only by women. Due
-                  to the decay of civilization, the survivors from around the
-                  world seek new beginnings in the woods up north in
-                  Scandinavia.
+                  most of them are women.
                 </p>
 
                 <table>
@@ -394,9 +380,7 @@
                   developed the process to give superpowers to regular people.
                   But when scientist Emily Stanton accidentally imbues her
                   estranged best-friend with incredible abilities, the two women
-                  must become the first superhero team. Now, it is up to Thunder
-                  Force to battle the super-powered Miscreants and save Chicago
-                  from the clutches of The King
+                  must become the first superhero team.
                 </p>
 
                 <table>
@@ -497,9 +481,7 @@
                   A mother, Victoria (Rose), is trying to put her dark past as a
                   Russian drug courier behind her, but retired cop Damon
                   (Freeman) forces Victoria to do his bidding by holding her
-                  daughter hostage. Now, Victoria must use guns, guts, and a
-                  motorcycle to take out a series of violent gangsters - or she
-                  may never see her child again.
+                  daughter hostage.
                 </p>
 
                 <table>
@@ -550,14 +532,7 @@
                   Determined to ensure Superman's ultimate sacrifice was not in
                   vain, Bruce Wayne aligns forces with Diana Prince with plans
                   to recruit a team of metahumans to protect the world from an
-                  approaching threat of catastrophic proportions. The task
-                  proves more difficult than Bruce imagined, as each of the
-                  recruits must face the demons of their own pasts to transcend
-                  that which has held them back, allowing them to come together,
-                  finally forming an unprecedented league of heroes. Now united,
-                  Batman, Wonder Woman, Aquaman, Cyborg and The Flash may be too
-                  late to save the planet from Steppenwolf, DeSaad and Darkseid
-                  and their dreadful intentions.
+                  approaching threat of catastrophic proportions.
                 </p>
 
                 <table>
@@ -660,9 +635,7 @@
                   forces of nature, clash on the big screen in a spectacular
                   battle for the ages. As a squadron embarks on a perilous
                   mission into fantastic uncharted terrain, unearthing clues to
-                  the Titans' very origins and mankind's survival, a conspiracy
-                  threatens to wipe the creatures, both good and bad, from the
-                  face of the earth forever.
+                  the Titans' very origins and mankind's survival.
                 </p>
 
                 <table>
@@ -714,10 +687,7 @@
                   beating for money, is unaware of his heritage-or why
                   Outworld's Emperor Shang Tsung (Chin Han) has sent his best
                   warrior, Sub-Zero (Joe Taslim), an otherworldly Cryomancer, to
-                  hunt Cole down. Fearing for his family's safety, Cole goes in
-                  search of Sonya Blade (Jessica McNamee) at the direction of
-                  Jax (Mehcad Brooks), a Special Forces Major who bears the same
-                  strange dragon marking Cole was born with.
+                  hunt Cole down.
                 </p>
 
                 <table>
@@ -758,42 +728,6 @@
             <img class="close" src="img/cancel.png" onclick="toggle('#sas')" />
             <div class="popup-wrapper">
               <video src="videos/sas.mp4" controls="true"></video>
-              <div class="movie-popup-text">
-                <h2>S.A.S. Red Notice</h2>
-                <p>
-                  Tom Buckingham, a special forces operator, is taking Dr.
-                  Sophie Hart from London to Paris to propose. When their train
-                  is deep inside the Channel Tunnel, Grace Lewis and her team of
-                  heavily armed war criminals seize the train and hold hundreds
-                  of passengers hostage. Grace threatens to expose the British
-                  governments darkest secrets and blow up the Channel Tunnel if
-                  her ransom demands are not met. Unarmed and cut off from his
-                  counter terror team, Tom is the only hope that Sophie and the
-                  other passengers have to make it out alive.
-                </p>
-
-                <table>
-                  <tr>
-                    <td>Genre:</td>
-                    <td>Action & Thriller</td>
-                  </tr>
-
-                  <tr>
-                    <td>Runtime:</td>
-                    <td>123 minutes</td>
-                  </tr>
-
-                  <tr>
-                    <td>Director:</td>
-                    <td>Magnus Martens</td>
-                  </tr>
-
-                  <tr>
-                    <td>Release date:</td>
-                    <td>Mar 12, 2021</td>
-                  </tr>
-                </table>
-              </div>
             </div>
           </div>
         </div>
@@ -814,36 +748,6 @@
             />
             <div class="popup-wrapper">
               <video src="videos/takeback.mp4" controls="true"></video>
-              <div class="movie-popup-text">
-                <h2>Take Back</h2>
-                <p>
-                  Zara and Brian are living the perfect small town life when a
-                  mysterious stranger from Zara's secret past kidnaps their
-                  daughter and now they must race to save her life.
-                </p>
-
-                <table>
-                  <tr>
-                    <td>Genre:</td>
-                    <td>Action & Thriller</td>
-                  </tr>
-
-                  <tr>
-                    <td>Runtime:</td>
-                    <td>89 minutes</td>
-                  </tr>
-
-                  <tr>
-                    <td>Director:</td>
-                    <td>Christian Sesma</td>
-                  </tr>
-
-                  <tr>
-                    <td>Release date:</td>
-                    <td>Jun 18, 2021</td>
-                  </tr>
-                </table>
-              </div>
             </div>
           </div>
         </div>
@@ -864,42 +768,6 @@
             />
             <div class="popup-wrapper">
               <video src="videos/redneg.mp4" controls="true"></video>
-              <div class="movie-popup-text">
-                <h2>The Redneg</h2>
-                <p>
-                  The Redneg takes place in the near future, in a fallen world
-                  after a devastating world war between woman and man. Only one
-                  percent of the world's population has survived the war and
-                  most of them are women. The few surviving men are being killed
-                  or captured by female groups, driven by the vision and the
-                  determination to build a new world, ruled only by women. Due
-                  to the decay of civilization, the survivors from around the
-                  world seek new beginnings in the woods up north in
-                  Scandinavia.
-                </p>
-
-                <table>
-                  <tr>
-                    <td>Genre:</td>
-                    <td>Action, Adventure & Drama</td>
-                  </tr>
-
-                  <tr>
-                    <td>Runtime:</td>
-                    <td>90 minutes</td>
-                  </tr>
-
-                  <tr>
-                    <td>Director:</td>
-                    <td>Luc Ziann</td>
-                  </tr>
-
-                  <tr>
-                    <td>Release date:</td>
-                    <td>Mar 02, 2021</td>
-                  </tr>
-                </table>
-              </div>
             </div>
           </div>
         </div>
@@ -920,40 +788,6 @@
             />
             <div class="popup-wrapper">
               <video src="videos/thunderforce.mp4" controls="true"></video>
-              <div class="movie-popup-text">
-                <h2>Thunder Force</h2>
-                <p>
-                  In a world terrorized by super-villains, one woman has
-                  developed the process to give superpowers to regular people.
-                  But when scientist Emily Stanton accidentally imbues her
-                  estranged best-friend with incredible abilities, the two women
-                  must become the first superhero team. Now, it is up to Thunder
-                  Force to battle the super-powered Miscreants and save Chicago
-                  from the clutches of The King
-                </p>
-
-                <table>
-                  <tr>
-                    <td>Genre:</td>
-                    <td>Action, Adventure & Comedy</td>
-                  </tr>
-
-                  <tr>
-                    <td>Runtime:</td>
-                    <td>106 minutes</td>
-                  </tr>
-
-                  <tr>
-                    <td>Director:</td>
-                    <td>Ben Falcone</td>
-                  </tr>
-
-                  <tr>
-                    <td>Release date:</td>
-                    <td>Apr 09, 2021</td>
-                  </tr>
-                </table>
-              </div>
             </div>
           </div>
         </div>
