--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       <span class="dot" onclick="currentSlide(3)"></span>
     </div>
 
+    <!-- Back To Top -->
     <a href="#" class="back-to-top">
       <i class="fas fa-chevron-up"></i>
     </a>
@@ -792,6 +793,12 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="photo-gallery">
+      <a href="gallery.html"
+        ><h2>Top 5 Movies<i class="fas fa-chevron-right"></i></h2>
+      </a>
     </div>
 
     <!-- Footer -->
