--- a/privacy.html
+++ b/privacy.html
@@ -55,6 +55,7 @@
         </nav>
       </header>
 
+      <!-- Back To Top -->
       <a href="#" class="back-to-top">
         <i class="fas fa-chevron-up"></i>
       </a>
