--- a/movies.html
+++ b/movies.html
@@ -21,8 +21,6 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="js/index.js" defer></script>
     <script src="js/popup.js" defer></script>
-    <script src="js/form-validation.js" defer></script>
-    <script src="js/slideshow.js" defer></script>
   </head>
 
   <body>
@@ -59,6 +57,7 @@
       </nav>
     </header>
 
+    <!-- Back To Top -->
     <a href="#" class="back-to-top">
       <i class="fas fa-chevron-up"></i>
     </a>
