--- a/movies.html
+++ b/movies.html
@@ -63,8 +63,10 @@
     </a>
 
     <!-- Action Movies -->
-    <div class="wrapper-title">
-      <a class="movies-title" href="#">Action Movies</a>
+    <div class="fixed-container">
+      <div class="wrapper-title">
+        <a class="movies-title" href="#">Action Movies</a>
+      </div>
     </div>
 
     <div class="wrapper">
