--- a/gallery.html
+++ b/gallery.html
@@ -63,7 +63,9 @@
       <i class="fas fa-chevron-up"></i>
     </a>
 
-    <h1>Our Top 5 Movies</h1>
+    <div class="lightbox-wrapper">
+      <h1>Our Top 5 Movies</h1>
+    </div>
 
     <!-- Lightbox -->
     <div class="row">
